--- a/productos.html
+++ b/productos.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> MotorShop </title>
+    
+    <!--Favicon-->
+    <link rel="icon" type="image/x-icon" href="./img/logo.png">
+    
     <!-- Estilos -->
     <link rel="stylesheet" href="css/globales.css">
     <link rel="stylesheet" href="css/productos.css">
@@ -20,7 +24,7 @@
         <!-- Logo izquierda -->
         <div class="header-logo">
             <img src="img/Logo.png" alt="Logo" class="logo">
-            <h1> MotorShop </h1>
+            <h1> MotorShop | Productos </h1>
         </div>
 
         <!-- Centro: nombre del usuario + navegación -->
