--- a/carrito.html
+++ b/carrito.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> MotorShop | Carrito</title>
+    
+    <!--Favicon-->
+    <link rel="icon" type="image/x-icon" href="./img/logo.png">
+    
     <!-- Estilos -->
     <link rel="stylesheet" href="css/globales.css">
     <link rel="stylesheet" href="css/carrito.css">
     <!-- Script -->
     <script defer src="js/productos.js"></script>
+
+
+
 </head>
 <body>
     <!-- ====================================
