--- a/productos.html
+++ b/productos.html
@@ -38,7 +38,7 @@
 
         <!-- Botón admin a la derecha -->
         <div class="header-admin">
-            <button class="boton-admin">Admin</button>
+            <button class="boton-admin" id="boton-admin">Admin</button>
         </div>
     </header>
 
