Correcion de error con el nombre de usuario en pantalla carrito

--- a/productos.html
+++ b/productos.html
@@ -25,7 +25,7 @@
         </div>
         <!-- Centro: nombre del usuario + navegación -->
         <div class="header-central">
-            <div class="nombre-cliente" id="nombre-cliente">¡Hola, Dylan!</div>
+            <div class="nombre-cliente" id="nombre-cliente">¡Hola,..!</div>
             <nav class="nav-cliente">
                 <a href="productos.html">Productos</a>
                 <a href="carrito.html">Carrito</a>
