agregamos modo oscuro

--- a/carrito.html
+++ b/carrito.html
@@ -33,7 +33,9 @@
         </div>
         <!-- Botón admin a la derecha -->
         <div class="header-admin">
-            <button class="boton-admin" id="boton-admin">Admin</button>
+            <button class="boton" id="boton-admin">Admin</button>
+            <button class="boton" id="boton-modo_oscuro"> Modo oscuro/claro </button>
+
         </div>
     </header>
     <main class="contenedor-carrito">
